# Codex-Backup-Toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  config.example.env
codex-local-backup/: SKILL.md
desktop/: index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: cli-reference.md  gui-design.md  helper-protocol.md  local-install-test.md  release-checklist.md  restore-guide.md  roadmap.md  security.md  storage-targets.md  windows.md
examples/: encrypted-local.env  local.env  rclone.env  smb.env  webdav.env
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
helper/: actions.mjs  actions.test.mjs  allowlist.mjs  automation-status.mjs  automation-status.test.mjs  config-store.mjs  config-store.test.mjs  executor.mjs  history-store.mjs  history-store.test.mjs  keychain.mjs  keychain.test.mjs  profile-paths.mjs  profile-paths.test.mjs  server.mjs  server.test.mjs
scripts/: backup-codex.sh  codexbackup.sh  codexinstallautomation.sh  codexrestore.sh  codexscheduledbackup.sh  install-automation.sh  restore-codex.sh  scheduled-backup-codex.sh
tests/: test-config-guide.sh  test-encryption-e2e.sh  test-install-validate.sh  test-local-e2e.sh  test-macos-local-install-smoke.sh  test-profile-plan.sh  (+14 more)
(+72 files in other folders)
