[package]
name = "clb"
version = "0.1.0"
description = "A small desktop backup tool for Codex state"
authors = ["Codex Local Backup contributors"]
edition = "2021"

[lib]
name = "codex_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.1", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.2.1"
dirs = "5.0.1"
