[package]
name = "codex-backup-toolkit"
version = "0.25.0"
description = "CodexBackup desktop app"
authors = ["jayhome137"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "codex_backup_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
ureq = { version = "2", features = ["json"] }
